--- a/react-bakery-website/package.json
+++ b/react-bakery-website/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "react": "^18.3.1",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
